[package]
name = "seqtools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "*"
clap = { version = "4.0.18", features = ["derive"] }
needletail = { version = "0.4.1", features = ["compression"] }
num-bigint = { version = "0.4.3", features = ["rand"] }
rand = "0.8.5"
