[package]
name = "seqtools"
version = "0.2.0"
edition = "2021"
authors = ["luc Blassel"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
histogram = "0.6.9"
needletail = { version = "0.4.1", features = ["compression"] }
rand = "0.8.5"
rand_distr = "0.4.3"
serde_json = "1.0.96"
textplots = "0.8.0"
